# CxxMade

./: CMakeLists.txt  CMakePresets.json  CompileOptions.cmake  Fat_CompileOptions.cmake  README.md
src/: Main.cxx
